# kolla-mesos

./: .coveragerc  .gitignore  .gitreview  CONTRIBUTING.rst  HACKING.rst  LICENSE  README.md  README.rst  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini  vagrant-openrc
ansible/: site.yml
ansible/group_vars/: all.yml
ansible/inventory/: all-in-one  multinode
config/: all.yml  config.json  kolla_mesos_start.py  openrc.j2
config/cinder/: cinder_config.yml.j2
config/cinder/defaults/: main.yml
config/cinder/templates/: cinder.conf.j2
config/glance/: glance_config.yml.j2
config/glance/defaults/: main.yml
config/glance/templates/: glance-api.conf.j2  glance-registry.conf.j2
config/heat/: heat_config.yml.j2
config/heat/templates/: extend_start.sh.j2  heat-api-cfn.conf.j2  heat-api.conf.j2  heat.conf.j2
config/heka/defaults/: main.yml
config/heka/templates/: heka-global.toml.j2
config/horizon/: horizon_config.yml.j2
config/horizon/defaults/: main.yml
config/horizon/templates/: local_settings.j2  start.sh
config/keystone/: keystone_config.yml  keystone_config.yml.j2
config/keystone/defaults/: main.yml
config/mariadb/: mariadb_config.yml  mariadb_config.yml.j2
config/memcached/: memcached_config.yml.j2
config/murano/: murano_config.yml.j2
config/neutron/: neutron_config.yml.j2
config/nova/: nova_config.yml.j2
config/rabbitmq/: rabbitmq_config.yml.j2
config/tools/: kolla-start-config.json
deployment_files/: default.marathon.j2  openrc.j2
deployment_files/cinder/: cinder-api.chronos.j2  cinder-api.marathon.j2  cinder-backup.marathon.j2  cinder-scheduler.marathon.j2  cinder-volume.marathon.j2
deployment_files/glance/: glance-api.chronos.j2  glance-api.marathon.j2  glance-registry.marathon.j2
deployment_files/heat/: heat-api-cfn.marathon.j2  heat-api.chronos.j2  heat-api.marathon.j2  heat-bootstrap.chronos.j2  heat-engine.marathon.j2
deployment_files/horizon/: horizon.marathon.j2
deployment_files/keystone/: keystone.chronos.j2  keystone.marathon.j2
deployment_files/mariadb/: mariadb.chronos.j2  mariadb.marathon.j2
deployment_files/memcached/: memcached.marathon.j2
deployment_files/murano/: murano-api.chronos.j2  murano-api.marathon.j2  murano-bootstrap.chronos.j2  murano-engine.marathon.j2
deployment_files/neutron/: neuton-agents.marathon.j2  neuton-linuxbridge-agent.marathon.j2  neutron-agents.marathon.j2  neutron-linuxbridge-agent.marathon.j2  neutron-openvswitch-agent.marathon.j2  neutron-server.chronos.j2  neutron-server.marathon.j2  openvswitch-db.chronos.j2  openvswitch-db.marathon.j2  openvswitch-vswitchd.marathon.j2
deployment_files/nova/: nova-api.chronos.j2  nova-api.marathon.j2  nova-compute.marathon.j2  nova-conductor.marathon.j2  nova-consoleauth.marathon.j2  nova-libvirt.marathon.j2  nova-novncproxy.marathon.j2  nova-scheduler.marathon.j2  nova-spicehtml3proxy.marathon.j2
deployment_files/rabbitmq/: rabbitmq.marathon.j2
doc/source/: chronos.rst  conf.py  deploy.rst  howto_add_a_new_service.rst  index.rst  marathon.rst  quickstart.rst  usage.rst
etc/: globals.yml  passwords.yml
etc/kolla-mesos/: kolla-mesos.conf
etc/oslo-config-generator/: kolla-mesos.conf
kolla-mesos/cmd/: manage.py
kolla-mesos/tests/: test_kolla-mesos.py
kolla_mesos/: chronos.py  cleanup.py  client.py  commands.py  config.py  configuration.py  deployment.py  exception.py  marathon.py  mesos.py  opts.py  render.py  service.py  service_definition.py  shell.py  utils.py  worker.py
kolla_mesos/cli/: chronos.py  commands.py  config.py  deployment.py  service.py  service_definition.py  utils.py
kolla_mesos/cmd/: ansible.py  ansible_deploy.py  chronos.py  cleanup.py  config.py  deploy.py  file_utils.py  manage.py  shell.py  show_tasks.py  update.py  zk_utils.py
kolla_mesos/common/: cli_utils.py  config_utils.py  docker_utils.py  file_utils.py  jinja_utils.py  mesos_utils.py  network_utils.py  retry_utils.py  utils.py  warning_utils.py  zk_utils.py
kolla_mesos/config/: ansible_cli.py  chronos.py  chronos_cli.py  cleanup_cli.py  config_cli.py  deploy_cli.py  docker.py  kolla.py  logging.py  marathon.py  mesos.py  multiprocessing_cli.py  network.py  profiles.py  ssh.py  zookeeper.py
kolla_mesos/container_scripts/: .#start.py  start.py
kolla_mesos/tests/: base.py  configparser_mock.py  test_chronos.py  test_cleanup.py  test_commands.py  test_configuration.py  test_deploy.py  test_deployment.py  test_kolla_mesos.py  test_marathon.py  test_mesos.py  test_service.py  test_service_definition.py  test_show_tasks.py
marathon/keystone/: keystone.json.j2
marathon/mariadb/: mariadb.json.j2
services/: all.yml  default.chronos.j2  default.marathon.j2
services/cinder/: cinder-api.yml.j2  cinder-backup.yml.j2  cinder-init.yml.j2  cinder-scheduler.yml.j2  cinder-volume.yml.j2
services/common/: common_config.yml.j2
services/glance/: glance-api.yml.j2  glance-init.yml.j2  glance-registry.yml.j2
services/heka/: heka.yml.j2
services/horizon/: horizon.yml.j2
services/keystone/: keystone-api.yml.j2  keystone-init.yml.j2  keystone-register.yml.j2
services/mariadb/: mariadb.yml.j2
services/memcached/: memcached.yml.j2
services/neutron/: neutron-agents.yml.j2  neutron-dhcp-agent.yml.j2  neutron-init.yml.j2  neutron-l3-agent.yml.j2  neutron-linuxbridge-agent.yml.j2  neutron-metadata-agent.yml.j2  neutron-openvswitch-agent.yml.j2  neutron-server.yml.j2  openvswitch-db.yml.j2  openvswitch-init.yml.j2  openvswitch-vswitchd.yml.j2
services/nova/: nova-api.yml.j2  nova-compute.yml.j2  nova-conductor.yml.j2  nova-consoleauth.yml.j2  nova-init.yml.j2  nova-libvirt.yml.j2  nova-novncproxy.yml.j2  nova-scheduler.yml.j2  nova-spicehtml3proxy.yml.j2
services/rabbitmq/: rabbitmq.yml.j2
tools/: bootstrap.sh  debug_container.py  kolla-mesos-ansible  kolla-mesos-cleanup  kolla-mesos-deploy  show_tasks.py  update.py  validate-all-json.sh  validate-all-yaml.sh  validate-config.py  validate-service.py
vagrant/: Vagrantfile  Vagrantfile.custom.example  newest_dhcp_lease.py  provision.sh
(+90 files in other folders)
