[metadata]
name = kolla-mesos
summary = Mesos Deployment for kolla
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    kolla_mesos
data_files =
    share/kolla-mesos/ansible = ansible/*
    share/kolla-mesos/config = config/*
    share/kolla-mesos/deployment_files = deployment_files/*

[entry_points]
console_scripts =
    kolla-mesos-deploy = kolla_mesos.cmd.deploy:main
    kolla-mesos-config = kolla_mesos.cmd.config:main
    kolla-mesos-cleanup = kolla_mesos.cmd.cleanup:main
oslo.config.opts =
    kolla_mesos = kolla_mesos.opts:list_opts

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = kolla-mesos/locale
domain = kolla-mesos

[update_catalog]
domain = kolla-mesos
output_dir = kolla-mesos/locale
input_file = kolla-mesos/locale/kolla-mesos.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = kolla-mesos/locale/kolla-mesos.pot
