[metadata]
name = kolla-mesos
summary = Mesos Deployment for kolla
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    kolla_mesos
data_files =
    share/kolla-mesos/ansible = ansible/*
    share/kolla-mesos/config = config/*
    share/kolla-mesos/services = services/*
scripts =
    tools/kolla-mesos-ansible

[entry_points]
console_scripts =
    kolla-mesos-deploy = kolla_mesos.cmd.deploy:main
    kolla-mesos-cleanup = kolla_mesos.cmd.cleanup:main
    kolla-mesos-update = kolla_mesos.cmd.update:main
    kolla-mesos = kolla_mesos.cmd.shell:main

kolla_mesos.cli =
    run =  kolla_mesos.cli.service:Run
    kill =  kolla_mesos.cli.service:Kill
    list =  kolla_mesos.cli.service:List
    show =  kolla_mesos.cli.service:Show
    log =  kolla_mesos.cli.service:Log
    chronos list = kolla_mesos.cli.chronos:List
    chronos show = kolla_mesos.cli.chronos:Show
    config list =  kolla_mesos.cli.config:ConfigList
    config show =  kolla_mesos.cli.config:ConfigShow
    config set =  kolla_mesos.cli.config:ConfigSet
    definition validate =  kolla_mesos.cli.service_definition:Validate
    definition inspect =  kolla_mesos.cli.service_definition:Inspect

oslo.config.opts =
    kolla_mesos = kolla_mesos.opts:list_opts

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = kolla-mesos/locale
domain = kolla-mesos

[update_catalog]
domain = kolla-mesos
output_dir = kolla-mesos/locale
input_file = kolla-mesos/locale/kolla-mesos.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = kolla-mesos/locale/kolla-mesos.pot
