[metadata]
name = kolla-mesos
summary = Mesos Deployment for kolla
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    kolla_mesos
data_files =
    share/kolla-mesos/ansible = ansible/*
    share/kolla-mesos/config = config/*
    share/kolla-mesos/services = services/*
scripts =
    tools/kolla-mesos-ansible
    tools/kolla-mesos-deploy
    tools/kolla-mesos-cleanup

[entry_points]
console_scripts =
    kolla-mesos-update = kolla_mesos.cmd.update:main
    kolla-mesos = kolla_mesos.cmd.shell:main

kolla_mesos.cli =
    run =  kolla_mesos.cli.service:Run
    kill =  kolla_mesos.cli.service:Kill
    list =  kolla_mesos.cli.service:List
    show =  kolla_mesos.cli.service:Show
    log =  kolla_mesos.cli.service:Log
    scale = kolla_mesos.cli.service:Scale
    snapshot = kolla_mesos.cli.service:Snapshot
    update = kolla_mesos.cli.service:Update
    chronos list = kolla_mesos.cli.chronos:List
    chronos show = kolla_mesos.cli.chronos:Show
    config list =  kolla_mesos.cli.config:ConfigList
    config show =  kolla_mesos.cli.config:ConfigShow
    config set =  kolla_mesos.cli.config:ConfigSet
    definition validate =  kolla_mesos.cli.service_definition:Validate
    definition inspect =  kolla_mesos.cli.service_definition:Inspect
    deployment run = kolla_mesos.cli.deployment:Run
    deployment kill = kolla_mesos.cli.deployment:Kill
    deployment cleanup = kolla_mesos.cli.deployment:Cleanup
    deployment show = kolla_mesos.cli.deployment:Show
    deployment list = kolla_mesos.cli.deployment:List
    commands list = kolla_mesos.cli.commands:List

oslo.config.opts =
    kolla_mesos = kolla_mesos.opts:list_opts

[global]
setup-hooks =
    pbr.hooks.setup_hook

[pbr]
autodoc_index_modules = true
autodoc_exclude_modules =
    *.tests.*
    kolla_mesos.cmd.*
    kolla_mesos.config.*
    kolla_mesos.opts
    kolla_mesos.cli.*
    kolla_mesos.common.*
    kolla_mesos.container_scripts.*

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = kolla-mesos/locale
domain = kolla-mesos

[update_catalog]
domain = kolla-mesos
output_dir = kolla-mesos/locale
input_file = kolla-mesos/locale/kolla-mesos.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = kolla-mesos/locale/kolla-mesos.pot
